--- a/index.html
+++ b/index.html
@@ -42,36 +42,54 @@
 <body>
   <div class="container">
     <h1>Privacy Policy</h1>
-    <p><strong>Last updated:</strong> August 2025</p>
+    <p><strong>Last updated:</strong> September 29, 2025</p>
 
     <section>
-      <p>Our app (“App”) respects your privacy. This Privacy Policy explains how we handle information when you use the app.</p>
+      <p>Our app (“TagShot”) respects your privacy. This Privacy Policy explains how we handle information when you use the app.</p>
     </section>
 
     <section>
       <h2>1. Information Collection</h2>
-      <p>This app does not collect any personal information from users.</p>
-      <p>We do not access your contacts, location, camera photos, or other personal data beyond what is necessary for the camera functionality.</p>
+      <p>TagShot may collect basic photo metadata, including the <strong>date, time, and location</strong> of capture.</p>
+      <p>Purpose: This information is used solely to improve the app functionality and provide context for your photos.</p>
+      <p>Retention: Metadata is automatically deleted after <strong>90 days</strong>.</p>
+      <p>Storage: All data is stored locally on your device. No metadata is uploaded to our servers.</p>
     </section>
 
     <section>
-      <h2>2. Data Sharing</h2>
+      <h2>2. User Accounts</h2>
+      <p>TagShot does not require you to create an account and does not collect usernames, passwords, or other login credentials.</p>
+    </section>
+
+    <section>
+      <h2>3. Data Sharing</h2>
       <p>We do not share any data with third parties.</p>
     </section>
 
     <section>
-      <h2>3. External Links</h2>
+      <h2>4. User Control and Deletion</h2>
+      <p>You can request deletion of your data at any time by contacting us via email. Uninstalling the app also permanently removes all locally stored data.</p>
+      <p>Metadata is automatically deleted after 90 days, even if no action is taken by the user.</p>
+    </section>
+
+    <section>
+      <h2>5. External Links</h2>
       <p>The app may include links to external websites or services. We are not responsible for the privacy practices of those external services.</p>
     </section>
 
     <section>
-      <h2>4. Updates</h2>
-      <p>This Privacy Policy may be updated occasionally. Users will be informed about any changes.</p>
+      <h2>6. Children’s Privacy</h2>
+      <p>TagShot is intended for users aged <strong>13 and older</strong>. We do not knowingly collect data from children under 13.</p>
+    </section>
+
+    <section>
+      <h2>7. Changes to This Privacy Policy</h2>
+      <p>We may update this Privacy Policy occasionally. Updates will be reflected in this document with a new "Last updated" date.</p>
     </section>
 
     <section>
       <h2>Contact Us</h2>
-      <p>If you have any questions regarding this Privacy Policy, you can contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+      <p>If you have any questions regarding this Privacy Policy, you can contact us at: <a href="mailto:israelalayo@gmail.com">israelalayo@gmail.com</a></p>
     </section>
   </div>
 </body>
