--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <section>
       <h2>Contact Us</h2>
-      <p>If you have any questions regarding this Privacy Policy, you can contact us at: <a href="mailto:israelalayo@gmail.com">israelalayo@gmail.com</a></p>
+      <p>If you have any questions regarding this Privacy Policy, you can contact us at: <a href="mailto:israel24681379@gmail.com">israel24681379@gmail.com</a></p>
     </section>
   </div>
 </body>
