Update index.html to CameraPo

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <p><strong>Last updated:</strong> September 29, 2025</p>
 
     <section>
-      <p>Our app (“TagShot”) respects your privacy. This Privacy Policy explains how we handle information when you use the app.</p>
+      <p>Our app (“CameraPo”) respects your privacy. This Privacy Policy explains how we handle information when you use the app.</p>
     </section>
 
     <section>
       <h2>1. Information Collection</h2>
-      <p>TagShot may collect basic photo metadata, including the <strong>date, time, and location</strong> of capture.</p>
+      <p>CameraPo may collect basic photo metadata, including the <strong>date, time, and location</strong> of capture.</p>
       <p>Purpose: This information is used solely to improve the app functionality and provide context for your photos.</p>
       <p>Retention: Metadata is automatically deleted after <strong>90 days</strong>.</p>
       <p>Storage: All data is stored locally on your device. No metadata is uploaded to our servers.</p>
@@ -58,7 +58,7 @@
 
     <section>
       <h2>2. User Accounts</h2>
-      <p>TagShot does not require you to create an account and does not collect usernames, passwords, or other login credentials.</p>
+      <p>CameraPo does not require you to create an account and does not collect usernames, passwords, or other login credentials.</p>
     </section>
 
     <section>
@@ -79,7 +79,7 @@
 
     <section>
       <h2>6. Children’s Privacy</h2>
-      <p>TagShot is intended for users aged <strong>13 and older</strong>. We do not knowingly collect data from children under 13.</p>
+      <p>CameraPo is intended for users aged <strong>13 and older</strong>. We do not knowingly collect data from children under 13.</p>
     </section>
 
     <section>
